# ghithub_trends_digger

./: .gitignore  AUTOLOADER_STREAMING_GUIDE.md  README.md  Red Hat Expert Agent usecases  STREAMING_PIPELINE_GUIDE.md  agent-reference.md  cicd_eval.excalidraw  databricks.yml  deep_agents.excalidraw  demo.md  eda-deep-dive.html  eda.md  f.env  graph.py  one-pager.html  orchestrator-live-memory-lifecycle.excalidraw  orchestrator-request-flow-middleware.excalidraw  orchestrator-today-vs-obo-scope.excalidraw  prompt.py  pyproject.toml  reasoning.py  roadmap.excalidraw  router.excalidraw.json  routing_specs.md  tasks.md  twin-router-habilitation.excalidraw  workers.md
resources/: autoloader_streaming.pipeline.yml  data_export.job.yml  ghithub_trends_digger.job.yml  ghithub_trends_digger.pipeline.yml
src/: dlt_autoloader_pipeline.ipynb  dlt_enhanced_pipeline.ipynb  dlt_pipeline.ipynb  notebook.ipynb  test_simulation.py
src/data_simulation/: __init__.py  date_mapper.py  streaming_simulator.py
src/ghithub_trends_digger/: data_export_job.py  main.py
tests/: main_test.py
